[gd_scene load_steps=7 format=3 uid="uid://rjxa7edahnbb"]

[ext_resource type="Script" path="res://game/entity/player.gd" id="1_vdi80"]
[ext_resource type="Shader" path="res://assets/shader/sprite3d_outline.gdshader" id="2_gu5be"]
[ext_resource type="Texture2D" uid="uid://diwwf1h2i8mxe" path="res://assets/sprite/test.png" id="2_tt3cq"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_f3jdb"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_70b4p"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ynmrm"]
render_priority = 0
shader = ExtResource("2_gu5be")
shader_parameter/line_color = Color(0, 0, 0, 1)
shader_parameter/glowSize = 8.0
shader_parameter/glowDensity = 1
shader_parameter/glowRadialCoverage = 15
shader_parameter/glowAngle = 0.0
shader_parameter/glowSharpness = 1.0
shader_parameter/alphaThreshold = 1.0
shader_parameter/sprite_texture = ExtResource("2_tt3cq")

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
platform_floor_layers = 4294967041
script = ExtResource("1_vdi80")
SPEED = 6.0
JUMP_SPEED = 13.0
GRAVITY = 4.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_f3jdb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_70b4p")

[node name="CoyoteTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="JumpQueueTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 2, 0)
material_overlay = SubResource("ShaderMaterial_ynmrm")
render_priority = 2
texture = ExtResource("2_tt3cq")

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="JumpQueueTimer" to="." method="_on_jump_queue_timer_timeout"]
